--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 .container{
-    margin: 0 auto;
+    margin: 10px 10px 10px;
 }
 
 .head{
@@ -22,6 +22,6 @@ body{
 }
 
 .main-section{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
